--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Eric Phillips</title>
+    <title>Deified: A Coding Project By Eric Phillips</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="index.html"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
-                alt="mark" width="30" height="30"> APP NAME</a>
+                alt="mark" width="30" height="30"> DEIFIED</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,9 +57,9 @@
 
      <!-- MAIN SECTION -->
      <main class="flex-shrink-0">
-         <div class="container px-5 py-4">
-            <h2 class="border-1 border-bottom border-dark mt-5">The Code for APP NAME</h2>
-            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
+         <div class="container px-5 pt-5">
+            <h2 class="border-1 border-bottom border-dark pt-5">The Code for DEIFIED</h2>
+            <div class="row g-5 pt-3 row-cols-1 row-cols-lg-2">
                 <div class="col-lg-8">
                     <pre class="line-numbers"><code class="language-javascript">
                         //Call Hello World 
@@ -70,8 +70,8 @@
                 </div>
                 <div class="col-lg-4">
                     <p>The code is structured in one function.</p>
-                    <h5 class="logoFont">Hello World</h5>
-                    <p><span class="logoFont">Hello World</span> is a function that displays an alert with a message of "Hello World!"</p>
+                    <h5 class="logoFont">Deified</h5>
+                    <p><span class="logoFont">Deified</span> is a program that checks if a string is a palindrome.</p>
                 </div>
             </div>
          </div>
