--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Eric Phillips</title>
+    <title>Deified: A Coding Project By Eric Phillips</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="index.html"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
-                alt="mark" width="30" height="30"> APP NAME</a>
+                alt="mark" width="30" height="30"> DEIFIED</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,10 +55,10 @@
     </nav>
     <!-- MAIN SECTION -->
     <main class="flex-shrink-0">
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2 mt-5">
+        <div class="container col-xxl-8 px-4 pt-5">
+            <div class="row g-5 pt-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-6 fw-bold lh-1 mb-3"><span class="logoFont">App Name</span>: A Coding Project</h1>
+                    <h1 class="display-6 fw-bold lh-1 mb-3"><span class="logoFont">DEIFIED</span>: A Coding Project</h1>
                     <h4 class="lead">
                         Count CASH one loop at a time. A javascript coding exercise utilizing loops. Write a
                         program that displays the numbers from 0 to 100. Apend a "$" symbol before each number. 
@@ -88,7 +88,7 @@
                     </h5>
                 </div>
                 <div class="col d-flex align-items-center">
-                    <img src="img/FastMoney.png" class="img-fluid center-block d-block mx-auto" 
+                    <img src="img/DeifiedLogo.png" class="img-fluid center-block d-block mx-auto" 
                     alt="App logo" width="700" height="500">
                 </div>
             </div>
