--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Eric Phillips</title>
+    <title>Deified: A Coding Project By Eric Phillips</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="index.html"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
-                alt="mark" width="30" height="30"> APP NAME</a>
+                alt="mark" width="30" height="30"> DEIFIED</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -55,9 +55,36 @@
     </nav>
     <!-- MAIN SECTION -->
     <main class="flex-shrink-0">
-        <div class="container px-5 py-4">
-            <div class="row mt-5">
-                <div class="col"></div>
+        <div class="container px-5 pt-5">
+            <div class="row row-cols-1 row-cols-lg-2 pt-5">
+                <div class="col">
+                    <h1 class="display-6 fw-bold lh-1 mb-3">
+                        <span class="logoFont">DEIFIED</span>: A CODING PROJECT
+                    </h1>
+                    <h4 class="lead pb-3">
+                        Sometimes it helps to work backwards. A javascript coding 
+                        exercise using arrays. Write a program that takes a string 
+                        from the user and presents the string back to the user in reverse. 
+                    </h4>
+                </div>
+                <div class="col">
+                    <h5 class="border-1 border-bottom border-dark">Enter a string</h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col">
+                            <input id="userString" type="text" class="form-control" placeholder="Enter a string..." aria-label="Enter a string">
+                        </div>
+                        <div class="col-12">
+                            <button type="button" id="submit" class="btn btn-dark">Check it!</button>
+                        </div>
+                        <div class="alert alert-success mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 class="alert-heading">Check Complete.</h4>
+                            <hr>
+                            <p class="mb-0" id="msg">
+                                <!-- Insert message here -->
+                            </p>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
