--- a/app.html
+++ b/app.html
@@ -14,7 +14,7 @@
     <!-- Google Fonts API -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
@@ -62,9 +62,8 @@
                         <span class="logoFont">DEIFIED</span>: A CODING PROJECT
                     </h1>
                     <h4 class="lead pb-3">
-                        Sometimes it helps to work backwards. A javascript coding 
-                        exercise using arrays. Write a program that takes a string 
-                        from the user and presents the string back to the user in reverse. 
+                        Deified is a palindrome. A palindrome is a word, phrase, or sequence that is identical when read 
+                        backward or forward. Write a program that checks if the phrase entered is a palindrome.  
                     </h4>
                 </div>
                 <div class="col">
@@ -74,10 +73,10 @@
                             <input id="userString" type="text" class="form-control" placeholder="Enter a string..." aria-label="Enter a string">
                         </div>
                         <div class="col-12">
-                            <button type="button" id="submit" class="btn btn-dark">Check it!</button>
+                            <button type="button" id="btnSubmit" class="btn btn-dark">Check it!</button>
                         </div>
                         <div class="alert alert-success mt-5 invisible fade show" id="alert" role="alert">
-                            <h4 class="alert-heading">Check Complete.</h4>
+                            <h4 id="alertHeader" class="alert-heading">Check Complete.</h4>
                             <hr>
                             <p class="mb-0" id="msg">
                                 <!-- Insert message here -->
@@ -113,6 +112,9 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click",getValue);
+    </script>
 </body>
 
 </html>
