--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Google Fonts API -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
@@ -60,9 +60,8 @@
                 <div class="col order-last order-lg-first">
                     <h1 class="display-6 fw-bold lh-1 mb-3"><span class="logoFont">DEIFIED</span>: A Coding Project</h1>
                     <h4 class="lead">
-                        Count CASH one loop at a time. A javascript coding exercise utilizing loops. Write a
-                        program that displays the numbers from 0 to 100. Apend a "$" symbol before each number. 
-                        Display the even numbers in <strong>BOLD.</strong>
+                        Deified is a palindrome. A palindrome is a word, phrase, or sequence that is identical when read 
+                        backward or forward. Write a program that checks if the phrase entered is a palindrome. 
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
