updated app description

--- a/code.html
+++ b/code.html
@@ -115,7 +115,14 @@
                     </code></pre>
                 </div>
                 <div class="col-lg-4">
-                    <p>The code is structured in one function.</p>
+                    <p>
+                        The app receives a string from the input field and utilises a regular expression to make sure 
+                        that only certain characters are stored in the string variable. It loops over the user string starting 
+                        from the end so that the new string is the reverse of the user string. This takes advantage of 
+                        the fact that strings are arrays in javascript. Then it just compares the user string with the 
+                        reversed string to see if they are the same. If they are, its a palindrome. The user will receive 
+                        a message of success if they don't enter a palindrome but will get a different message if they do.
+                    </p>
                     <h5 class="logoFont">Deified</h5>
                     <p><span class="logoFont">Deified</span> is a program that checks if a string is a palindrome.</p>
                 </div>
