--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                         backward or forward. Write a program that checks if the phrase entered is a palindrome. 
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript IF/THEN/ELSE</li>
-                        <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript IF/THEN/ELSE</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
                     </ul>
                     <div>
                         <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
