--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/deified">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://ewp-portfolio.netlify.com/#about">About</a>
