fix html icon class & remove height on main img

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <div class="row">
                                 <div class="col"><i class="fab fa-js-square fa-4x jsicon"></i></div>
                                 <div class="col"><i class="fab fa-bootstrap fa-4x bsicon"></i></div>
-                                <div class="col"><i class="fab fa-html5 fa-4x htmlicon"></i></div>
+                                <div class="col"><i class="fab fa-html5 fa-4x html5icon"></i></div>
                                 <div class="col"><i class="fab fa-css3-alt fa-4x cssicon"></i></div>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col d-flex align-items-center">
                     <img src="img/DeifiedLogo.png" class="img-fluid center-block d-block mx-auto" 
-                    alt="App logo" width="700" height="500">
+                    alt="App logo" width="700">
                 </div>
             </div>
         </div>
