improved styling on mobile

--- a/code.html
+++ b/code.html
@@ -131,20 +131,20 @@
      </main>
 
     <!-- FOOTER SECTION -->
-    <footer class="footer mt-auto py-3 sticky-footer">
+    <footer class="footer mt-auto py-3 py-sm-2 py-lg-3 sticky-footer">
         <div class="container-fluid">
-            <div class="row row-cols-1 row-cols-lg-3 gy-2">
-                <div class="col order-last order-lg-first text-light">
-                    <div><span class="text-muted">&copy; 2022</span> Eric Phillips | ephillips.tx@gmail.com</div>
+            <div class="row row-cols-sm-3 gy-2">
+                <div class="col-12 d-flex align-items-center justify-content-center order-last order-lg-first text-light">
+                    <p class="mb-0"><span class="text-warning">&copy; 2022</span> Eric Phillips | ephillips.tx@gmail.com</p>
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
+                <div class="col-6 d-flex align-items-center justify-content-center">
                     <img src="img/wht-android-chrome-512x512.png" alt="Eric Phillips Logo" height="36">
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
+                <div class="col-6 d-flex align-items-center justify-content-center">
                     <div class="row">
-                        <div class="col social"><a href="https://www.linkedin.com/in/eric-phillips-04b92252/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/ephillips-tx" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://twitter.com/11EricWayne11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social px-3 m-0"><a href="https://www.linkedin.com/in/eric-phillips-04b92252/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social px-3 m-0"><a href="https://twitter.com/11EricWayne11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social px-2 px-sm-3 px-md-2 m-0"><a href="https://github.com/ephillips-tx" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                     </div>
                 </div>
             </div>
