--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
     <!-- MAIN SECTION -->
     <main class="flex-shrink-0">
-        <div class="container col-xxl-8 px-4 pt-5">
+        <div class="container col-xxl-8 px-4 pt-4 pt-sm-5 mb-1">
             <div class="row g-5 pt-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
                     <h1 class="display-6 fw-bold lh-1 mb-3"><span class="logoFont">DEIFIED</span>: A Coding Project</h1>
@@ -72,42 +72,38 @@
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript IF/THEN/ELSE</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
                     </ul>
-                    <div>
-                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
+                    <div id="appBtn">
+                        <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2 mb-3" href="app.html">Try It Out!</a>
                     </div>
-                    <h5 class="fw-bold mt-5">
-                        <div class="d-flex">
-                            <div class="row">
-                                <div class="col"><i class="fab fa-js-square fa-4x jsicon"></i></div>
-                                <div class="col"><i class="fab fa-bootstrap fa-4x bsicon"></i></div>
-                                <div class="col"><i class="fab fa-html5 fa-4x html5icon"></i></div>
-                                <div class="col"><i class="fab fa-css3-alt fa-4x cssicon"></i></div>
-                            </div>
-                        </div>
-                    </h5>
+                    <div class="row" id="iconRow">
+                            <div class="col"><i class="fab fa-js-square jsicon"></i></div>
+                            <div class="col"><i class="fab fa-bootstrap bsicon"></i></div>
+                            <div class="col"><i class="fab fa-html5 html5icon"></i></div>
+                            <div class="col"><i class="fab fa-css3-alt cssicon"></i></div>
+                    </div>
                 </div>
-                <div class="col d-flex align-items-center">
+                <div class="col d-flex align-items-center" id="logoCol">
                     <img src="img/DeifiedLogo.png" class="img-fluid center-block d-block mx-auto" 
-                    alt="App logo" width="700">
+                    alt="App logo" width="700" id="img-logo">
                 </div>
             </div>
         </div>
     </main>
     <!-- FOOTER SECTION -->
-    <footer class="footer mt-auto py-3 sticky-footer">
+    <footer class="footer mt-auto py-3 py-sm-2 py-lg-3 sticky-footer">
         <div class="container-fluid">
-            <div class="row row-cols-1 row-cols-lg-3 gy-2">
-                <div class="col order-last order-lg-first text-light">
-                    <div><span class="text-muted">&copy; 2022</span> Eric Phillips | ephillips.tx@gmail.com</div>
+            <div class="row row-cols-sm-3 gy-2">
+                <div class="col-12 d-flex align-items-center justify-content-center order-last order-lg-first text-light">
+                    <p class="mb-0"><span class="text-warning">&copy; 2022</span> Eric Phillips | ephillips.tx@gmail.com</p>
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
+                <div class="col-6 d-flex align-items-center justify-content-center">
                     <img src="img/wht-android-chrome-512x512.png" alt="Eric Phillips Logo" height="36">
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
+                <div class="col-6 d-flex align-items-center justify-content-center">
                     <div class="row">
-                        <div class="col social"><a href="https://www.linkedin.com/in/eric-phillips-04b92252/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/ephillips-tx" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://twitter.com/11EricWayne11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social px-3 m-0"><a href="https://www.linkedin.com/in/eric-phillips-04b92252/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
+                        <div class="col social px-3 m-0"><a href="https://twitter.com/11EricWayne11" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social px-2 px-sm-3 px-md-2 m-0"><a href="https://github.com/ephillips-tx" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                     </div>
                 </div>
             </div>
